PROTON-2472: epoll proactor - fix ready list tracking when EINTR in epoll_wait